Fix(Style): Don't overlap sibling columns when text is really long

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -29,6 +29,7 @@
 
             .item-header {
                 grid-area: item-header;
+                overflow: hidden;
 
                 .title {
                     font-size: larger;
@@ -62,6 +63,7 @@
             .item-main {
                 grid-area: item-main;
                 color: black;
+                overflow: hidden;
             }
 
             .item-footer {
